# final_package_203

./: CHANGELOG.md  README.md
final_package_203/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
final_package_203/backtests/: Backtest.csv  Backtest['AGM-A', 'DGP', 'VODAF', 'EAF', 'BDTX', 'HIHO'].csv  Backtest['ARCT', 'FLG-PA', 'CNO', 'PB', 'IQV', 'NTRB', 'RF-PC', 'UCASU', 'CBU'].csv  Backtest['ARKO', 'ACIU', 'MFAN', 'AAGH'].csv  Backtest['DWTX', 'ARQ', 'TTEC'].csv  Backtest['FOX', 'KNGRF', 'IRDM'].csv  Backtest['GAMI', 'MPW', 'OVLY', 'VNDA'].csv  Backtest['MRCY', 'RMSL', 'ZETA', 'WAT', 'ONEI', 'MS-PF'].csv  Backtest['SKE', 'BMN', 'ENLT'].csv  Backtest['ZYBT', 'DCOM', 'BRBR', 'DREM', 'TKC', 'HCWB'].csv
final_package_203/docs/: Makefile  conf.py  example.ipynb  make.bat
final_package_203/src/final_package_203/: __init__.py  backtest.py  class_basket.py  opti_basket.ipynb  performance_comparator.ipynb  stats.py
final_package_203/tests/: CHANGELOG.md  performance_comparator.ipynb  test_class_basket.py  test_equally_weighted_basket.py  test_final_package_203.py  test_optimized_basket.py  test_performance_comparator.py  test_stats.py
